{
    "name": "InputSystem_Actions",
    "maps": [
        {
            "name": "XRI RightHand",
            "id": "3bcb6841-7b20-4f8c-a84a-6acec4485693",
            "actions": [
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "7f5167c5-77b5-4ee5-920b-b68fcf8cc4b8",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotation",
                    "type": "Value",
                    "id": "51eb8440-07ed-463b-8c59-d2641bdd612b",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "a3b12ec1-ae87-4a4d-9a37-6b592521af8d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7690be51-20c4-4d7f-9fda-3470b510e6af",
                    "path": "<XRController>{RightHand}/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "002ce75f-a2cc-4f28-93a0-af1157984dcf",
                    "path": "<XRController>{RightHand}/deviceRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3b6a4a3d-7e58-4f71-9f47-2c1326757072",
                    "path": "<XRController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "XRI LeftHand",
            "id": "6cd8dab5-a3c8-4019-8472-c3cf360ac07b",
            "actions": [
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "1b1bf600-97ef-4502-92ba-08cadfb74ae2",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotation",
                    "type": "Value",
                    "id": "9d68e190-f37d-4ce8-8a61-12bd31616ea3",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "f1cf31f9-9c0e-4bda-96a0-85c1578c9889",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "81197293-67ef-42f3-bffc-3d82ae12527d",
                    "path": "<XRController>{LeftHand}/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f1cf31f9-9c0e-4bda-96a0-85c1578c9888",
                    "path": "<XRController>{LeftHand}/deviceRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f1cf31f9-9c0e-4bda-96a0-85c1578c9999",
                    "path": "<XRController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "XRI HMD",
            "id": "83547a9a-b9ab-47d1-8e9b-d7bcdb7ad9ef",
            "actions": [
                {
                    "name": "centerEyePosition",
                    "type": "Value",
                    "id": "baf1b0b0-82e4-4e8a-a2ac-9b6b70f12ccc",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "centerEyeRotation",
                    "type": "Value",
                    "id": "3a2e7b1c-d0e9-4b3a-ba5a-1bb7e5b9e456",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "56c0b555-a85a-4f9d-8891-b2e1e5d8f123",
                    "path": "<XRHMD>/centerEyePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "centerEyePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "67d1c666-b96b-5a0e-9902-c3f6f6e9f234",
                    "path": "<XRHMD>/centerEyeRotation", 
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "centerEyeRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "XR",
            "bindingGroup": "XR",
            "devices": [
                {
                    "devicePath": "<XRController>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<XRHMD>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}